--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -23,4 +24,10 @@ section{
     padding: 10px 40px;
     border-radius: 5px;
     background-image: linear-gradient(orange,tomato);
+    color: white;
+    font-weight: 100;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
