--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -19,15 +20,24 @@ section{
 .half-width img{
     width: 80%;
 }
+p{
+    text-align: justify;
+    margin-right: 15%;
+}
 .link-button{
     text-decoration: none;
     padding: 10px 40px;
     border-radius: 5px;
     background-image: linear-gradient(orange,tomato);
     color: white;
-    font-weight: 100;
+    font-weight: 700;
 }
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
