--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 2%;
+    padding-left: 5%;
     margin-top: 0%;
 }
 .half-width img{
@@ -29,6 +29,7 @@ p{
     text-decoration: none;
     padding: 10px 40px;
     border-radius: 5px;
+    /* background-color: orange; */
     background-image: linear-gradient(orange,tomato);
     color: white;
     font-weight: 700;
@@ -41,4 +42,7 @@ p{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+
 }
