--- a/Module-2/style.css
+++ b/Module-2/style.css
@@ -1,6 +1,14 @@
 p{
-    height: 220px;
-    width: 240px;
-    color: blue;
-    background-color: red;
+    color: red;
+    background-color: indigo;
+    height: 70px;
+    width: 75%;
+    font-size: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+h1{
+    color: #a775ad;
 }
