--- a/Module-2/blog.css
+++ b/Module-2/blog.css
@@ -1,5 +1,15 @@
+body{
+    margin: 0;
+    padding: 0;
+    background-color: antiquewhite;
+}
 .blog{
     background-color: rgb(16, 180, 230);
+    margin-left: 5px;
+    border: 3px solid tomato;
+    border-radius: 9px;
+    margin: 20px 10px;
+    padding: 5px;
 }
 .author-name{
     color: red;
