--- a/Module-2/blog.css
+++ b/Module-2/blog.css
@@ -7,7 +7,9 @@ body{
     background-color: rgb(16, 180, 230);
     border: 3px solid tomato;
     border-radius: 9px;
-    margin: 20px 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 30px;
     padding: 20px;
 
 }
